syntax = "proto3";

option go_package = ".;worker";
option java_package = "jointfaas.worker";
option java_multiple_files = true;
option java_outer_classname = "WorkerProto";
option objc_class_prefix = "HLW";
package worker;

service Worker {
    rpc Invoke(InvokeRequest) returns (InvokeResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Reset(ResetRequest) returns (ResetResponse) {}
    rpc InitFunction(InitFunctionRequest) returns (InitFunctionResponse) {}
    rpc Metrics(MetricsRequest) returns (MetricsResponse) {}
    rpc GetHeartBeat(stream HeartBeatRequest) returns (stream HeartBeatResponse) {}
    rpc CreateContainer(CreateContainerRequest) returns (CreateContainerResp) {}
    rpc DeleteContainer(DeleteContainerRequest) returns (DeleteContainerResp) {}
}

message InvokeRequest {
    string name = 1;
    bytes payload = 2;
}

message InvokeResponse {
    enum Code {
        OK = 0;
        NO_SUCH_FUNCTION = 1;
        RUNTIME_ERROR = 2;
        RETRY = 3;
    }
    Code code = 1;
    bytes output = 2;
}

message RegisterRequest {
    string id = 1;
    string addr = 2;
    string runtime = 3;
    string funcName = 4;
    int64 memory = 5;
    int64 disk = 6;
}

message RegisterResponse {
    enum Code {
        OK = 0;
        ERROR = 1;
    }
    Code code = 1;
    string msg = 2;
}

message ResetRequest {
    string addr = 1;
}

message ResetResponse {
    enum Code {
        OK = 0;
        ERROR = 1;
    }
    Code code = 1;
}

message InitFunctionRequest {
    string funcName = 1;
    string image = 2;
    string runtime = 3;
    string codeURI = 4;
    int64 timeout = 5;
    int64 memorySize = 6;
}

message InitFunctionResponse {
    enum Code {
        OK = 0;
        ERROR = 1;
    }
    Code code = 1;
    string msg = 2;
}

message MetricsRequest {

}

message MetricsResponse {
    // TODO
}

message HeartBeatRequest {
    string nonce = 1;
}

message HeartBeatResponse {
    string nonce = 1;
}

message CreateContainerRequest {
    string funcName = 1;
}

message CreateContainerResp {
    enum Code {
        OK = 0;
        NO_SUCH_FUNCTION = 1;
    }
    Code code = 1;
}

message DeleteContainerRequest {
    string funcName = 1;
    int32 num = 2;
}

message DeleteContainerResp {
    enum Code {
        OK = 0;
        NO_RUNTIME = 1;
        NO_SUCH_FUNCTION = 2;
    }
    Code code = 1;
}